mongo db setup with post and get working to /messages

--- a/readme
+++ b/readme
@@ -1,9 +1,10 @@
 ## Chat bot to learn on
 
 # TODO:
- - Persistent chat/log on single page using MongoDB
- - Rooms to move to
- - Password locked rooms
- - User accounts with auth
- - Persistent rooms with auth based on what the user has access to
- - Sending static media(.jpeg/.gif)
+
+- Persistent chat/log on single page
+- Rooms to move to
+- Password locked rooms
+- User accounts with auth
+- Persistent rooms with auth based on what the user has access to
+- Sending static media(.jpeg/.gif)
